--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,12 @@
     <artifactId>jaxb-runtime</artifactId>
     <version>3.0.0</version>
 </dependency>
-
+<!--
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.2.3</version>
+</dependency>-->
   </dependencies>
    <build>
         <sourceDirectory>src/main/java</sourceDirectory>
